--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                     <div class="photo" style="height:60px;background-image:url('resim/gazete.gif');"></div>
                     <ul class="links">
                       <li><a href="deyed.html">DEYED  Etkili Okul Projesi Başladı </a></li>
-                      <li><a href="deyed.pdf">DEYED Katalogunu indirmek için tıklayınız</a><a href="Peladon Software Signs Reseller Agreement with ECS Imaging.html"></a></li>
+                      <li><a href="deyed.pdf">DEYED Katalogunu indirmek için </a><a href="Peladon Software Signs Reseller Agreement with ECS Imaging.html"></a></li>
                       <li><a href="doff2008.pdf">DataOfis Ürün Katalogunu indirmek için tıklayınız </a></li>
                     </ul>
                   </div>
